<resources>
    <string name="app_name">Florarium</string>

    <string name="navigation_tab_home">Home</string>
    <string name="navigation_tab_all_plants">All plants</string>
    <string name="navigation_tab_profile">Profile</string>

    <string name="content_description_image">Image of the %s</string>
    <string name="content_plant_create_button">Add to my plants</string>
    <string name="description_chosen_plant_image">Chosen plant image</string>

    <string name="hint_plant_title">Enter plant name</string>

    <string name="label_fragment_home">Plants</string>
    <string name="label_fragment_plant_creation">Create plant</string>

    <string name="message_plant_is_added">Plant is added!</string>
    <string name="slider_description">Slider for setting value in days</string>

    <string name="title_care_schedule">Care schedule</string>
    <string name="title_fertilizing">Fertilizing</string>
    <string name="title_interval_in_days">Interval (in days) - %d</string>
    <string name="title_last_care">Last care (days ago) - %d</string>
    <string name="title_rotating">Rotating</string>
    <string name="title_spraying">Spraying</string>
    <string name="title_watering">Watering</string>

    <string name="tooltip_fertilizing">Fertilizing</string>
    <string name="tooltip_rotating">Rotating</string>
    <string name="tooltip_spraying">Spraying</string>
    <string name="tooltip_watering">Watering</string>

    <string name="value_not_set">Not set</string>
    <string name="title_intent_image_select">Select from</string>
    <string name="title_menu_delete">Delete</string>
    <string name="successful_single_deletion">%s is deleted!</string>
    <string name="successful_multiple_deletion">Deleted successful!</string>
    <string name="btn_add_plant">Add plant</string>
    <string name="btn_add_photo">Add photo</string>
    <string name="btn_save">Save</string>
    <string name="label_fragment_plant_update">Update plant</string>
    <string name="btn_load_image">Load image</string>
    <string name="error_image_not_saved">Couldn\'t save image</string>

    <string name="dialog_get_image_from_camera">Camera</string>
    <string name="dialog_get_image_from_gallery">Gallery</string>

    <string name="error_long_plant_name">Too long name</string>
    <string name="error_empty_plant_name">Name can\'t be empty</string>
    <string name="error_could_not_create_plant">Couldn\'t create plant</string>
    <string name="error_plant_deletion">Something went wrong</string>

    <string name="setting_notifications">Notifications</string>
    <string name="content_setting_notifications_time_to_notify">Time to notify</string>

    <!--  region Notifications  -->

    <string name="notifications_care_channel_name">Plants care</string>
    <string name="notifications_care_channel_description">Remind to watering, spraying and other plants caring actions.</string>

    <string name="notifications_care_multiple">%d plants needs care!</string>
    <string name="notifications_care_title">%s needs care!</string>
    <string name="notifications_care_message">Don\'t forget!</string>
    <string name="content_setting_notifications_time_updated">Updated</string>
    <string name="content_setting_notifications_time_error">Something went wrong</string>

    <!--  endregion  -->
</resources>