...
            app:layout_constraintBottom_toBottomOf="@id/plantImageView"
            app:layout_constraintEnd_toEndOf="@id/plantImageView"
            app:layout_constraintStart_toStartOf="@id/plantImageView"
            app:layout_constraintTop_toTopOf="@id/plantImageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:hint="@string/hint_plant_title"
...
            app:hintTextColor="@color/edit_text_with_gradient_background"
            app:layout_constraintBottom_toBottomOf="@id/plantImageView"
            app:layout_constraintEnd_toStartOf="@id/btn_load_image"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?attr/colorOnPrimarySurface" />
        </com.google.android.material.textfield.TextInputLayout>
...
