<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.anonlatte.florarium.ui.home.HomeFragment"
        android:label="@string/label_fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_creation"
            app:destination="@id/creationFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="plantToSchedule"
                android:defaultValue="@null"
                app:argType="com.anonlatte.florarium.data.domain.PlantWithSchedule"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/creationFragment"
        android:name="com.anonlatte.florarium.ui.creation.CreationFragment"
        android:label="@string/label_fragment_plant_creation"
        tools:layout="@layout/fragment_plant_creation">
        <argument
            android:name="plantToSchedule"
            android:defaultValue="@null"
            app:argType="com.anonlatte.florarium.data.domain.PlantWithSchedule"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.anonlatte.florarium.ui.settings.SettingsFragment"
        android:label="SettingsFragment"
        tools:layout="@layout/fragment_settings" />

</navigation>